--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <div id="app"></div>
         <script src="/compiledjs/main.js"></script>
     </body>
 </html>
